cabal-version:      2.4
name:               mobile-core
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Moritz Angermann
maintainer:         moritz.angermann@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README

library
    exposed-modules:  Lib

    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   lib
    default-language: Haskell2010

    install-includes: stubs/Lib_stub.h
    -- let's put the stubs somewhere predictable
    ghc-options:      -stubdir stubs -staticlib

executable mobile-core
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , mobile-core
    hs-source-dirs:   app
    default-language: Haskell2010

executable mobile-core-c
    c-sources:        c-app/main.c
    main-is:          Dummy.hs
    build-depends:    base
                    , mobile-core
    hs-source-dirs:   c-app
    default-language: Haskell2010
    ghc-options:      -no-hs-main
    include-dirs:     stubs
    includes:         stubs/Lib_stub.h